# kernel-analyzer

./: .gitignore  Makefile  Makefile.inc  README.md
src/lib/: Annotation.cc  Annotation.h  CMakeLists.txt  CallGraph.cc  CallGraph.h  Common.h  Global.h  KAMain.cc  LinuxSS.cc  LinuxSS.h  NodeFactory.cc  NodeFactory.h  Pass.h  PointTo.cc  PointTo.h  PtsSet.h  Range.cc  Range.h  SafeStack.cc  SafeStack.h  StructAnalyzer.cc  StructAnalyzer.h
